--- a/package.json
+++ b/package.json
@@ -3,6 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "amazon-product-api": "^0.4.4",
+    "lodash": "^4.17.4",
+    "prop-types": "^15.5.10",
+    "react-animate-css": "0.0.1",
+    "react-materialize": "^1.0.10",
+    "react-router-dom": "^4.2.2",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
